# CS555_PROJECT

./: .gitignore  CMakeLists.txt  README.md  all_dept_info.py  machines (copy 1).csv  machines.csv  machines.xlsx
includes/: transport.h  wire_msg.h
raytracer/: CMakeLists.txt
raytracer/properties/: renderer_properties.txt
raytracer/src/defines/: error_codes.hpp  message_ids.hpp
raytracer/src/framework/: CMakeLists.txt  blockingQ.cpp  blocking_queue.hpp  framework_includes.hpp  listener.hpp  message.hpp  messaging_framework.cpp  messaging_framework.hpp  properties_reader.cpp  properties_reader.hpp  stream_buffer.cpp  stream_buffer.hpp  stream_buffer_unit_test.cpp  trace_logger.cpp  trace_logger.hpp
raytracing/: 100machines.txt  CMakeLists.txt  Makefile  kill.sh  run.py  start.sh
raytracing/properties/: client_properties.txt  master_properties.txt  master_properties_df  master_properties_dv  master_properties_sr  master_properties_ss  worker_properties.txt
raytracing/scripts/: 128machines.txt  16machines.txt  20machines.txt  256machines.txt  275machines.txt  279machines.txt  32machines.txt  5machines.txt  64machines.txt  kill.sh  killall.sh  putty_kill.sh  putty_start.sh  start.sh
raytracing/src/client/: CMakeLists.txt  client.cpp  client.hpp  client_main.cpp  scene_writer.cpp  scene_writer.hpp
raytracing/src/defines/: defines_includes.hpp  error_codes.hpp  message_ids.hpp
raytracing/src/framework/: CMakeLists.txt  blocking_queue.hpp  message.hpp  messaging_framework.cpp  messaging_framework.hpp  properties_reader.cpp  properties_reader.hpp  stream_buffer.hpp  stream_buffer_unit_test.cpp  trace_logger.cpp  trace_logger.hpp
raytracing/src/master/: CMakeLists.txt  master_main.cpp  master_scheduler.cpp  master_scheduler.hpp  resource_tracker.cpp  resource_tracker.hpp  scene_scheduler.cpp  scene_scheduler.hpp  scene_scheduler_dynamic.cpp  scene_scheduler_dynamic.hpp  scene_scheduler_static.cpp  scene_scheduler_static.hpp  scheduler_base.cpp  scheduler_base.hpp  static_schedule_cmd.cpp  static_schedule_cmd.hpp
raytracing/src/ray_tracer/: CMakeLists.txt  SceneSetup.h  camera.h  hitable.h  hitablelist.h  main.cpp  material.h  onb.h  perlin.h  ray.h  sampleScene.txt  scene.h  scene_descriptor.hpp  surfaces.h  texture.h  transformations.h
raytracing/src/transport/: CMakeLists.txt  tcp_io_connection.cpp  tcp_io_connection.hpp  tcp_io_send_recv.cpp  tcp_io_send_recv.hpp  tcp_io_server.cpp  tcp_io_server.hpp  transport_mgr.cpp  transport_mgr.hpp  transport_msgs.hpp
raytracing/src/wiremsg/: CMakeLists.txt  pixel_produce_msg.cpp  pixel_produce_msg.hpp  scene_description_msg.hpp  scene_produce_msg.cpp  scene_produce_msg.hpp  wire_msg.cpp  wire_msg.hpp  wire_msg_factory.cpp  wire_msg_factory.hpp  worker_registration_msg.cpp  worker_registration_msg.hpp
raytracing/src/worker/: CMakeLists.txt  pixel_producer.cpp  pixel_producer.hpp  worker.cpp  worker.hpp  worker_main.cpp
src/client/: CMakeLists.txt
src/framework/: listener.hpp  thread.hpp
src/renderer/: CMakeLists.txt  renderer_main.cpp  renderer_scheduler.hpp
src/transport/: CMakeLists.txt  client.cpp  tcp_client.cpp  tcp_io_connection.cpp  tcp_io_connection.hpp  tcp_io_receiver.cpp  tcp_io_sender.cpp  tcp_io_server.cpp  tcp_io_server.hpp  tcp_server.cpp  tcp_server.hpp  transport.cpp  transport_mgr.cpp  transport_mgr.hpp
src/worker/: CMakeLists.txt  worker_main.cpp
(+40 files in other folders)
